--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Svaret er ja</title>
   </head>
   <body>
     <div class="tenor-gif-embed" data-postid="12558540313201298933" data-share-method="host" data-aspect-ratio="1.76596" data-width="100%"><a href="https://tenor.com/view/willi-railo-svaret-er-ja-ja-svarer-ja-p%C3%A5-det-gif-12558540313201298933">Willi Railo Svaret Er Ja GIF</a>from <a href="https://tenor.com/search/willi+railo-gifs">Willi Railo GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
